Adding jwt autorization and authentication, not complete version